--- a/home/.config/YouTube Music/config.json
+++ b/home/.config/YouTube Music/config.json
@@ -18,7 +18,7 @@
 		"proxy": "",
 		"startingPage": "",
 		"themes": [
-			"/home/xnm/.config/YouTube Music/macchiato.css"
+			"/home/havoc/.config/YouTube Music/macchiato.css"
 		]
 	},
 	"plugins": {
