--- a/home/.ssh/config
+++ b/home/.ssh/config
@@ -1,17 +1,6 @@
-Host github.com-xnm1
+Host github.com-veri-tty
     HostName github.com
     User git
-    IdentityFile ~/.ssh/github_xnm1
+    IdentityFile ~/.ssh/veri-tty
     AddKeysToAgent yes
 
-Host github.com-artemplummy
-    HostName github.com
-    User git
-    IdentityFile ~/.ssh/work
-    AddKeysToAgent yes
-
-Host bitbucket.org-artemplummy
-    HostName bitbucket.org
-    User git
-    IdentityFile ~/.ssh/work
-    AddKeysToAgent yes
